cambios varios. publicacion directa sobre panelito sin intermediar monimonitor